kustomize/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-kube-demo-staging
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:$service_port
    cert-manager.io/cluster-issuer: 'staging-issuer-amd64'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - thankyou.staging.kanebroslab.com
    secretName: thanks-staging-tls-v1
  rules:
  - host: thankyou.staging.kanebroslab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-kube-demo
            port:
              number: 80
